<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dietitian"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/navigation_dietitian" />

        <item
            android:id="@+id/nav_healty_diet"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/navigation_healty_diet" />

        <item
            android:id="@+id/nav_where"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/navigation_where" />

        <item
            android:id="@+id/nav_healty_recipe"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/navigation_healty_recipe" />

    </group>

</menu>
