<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="userModel"
            type="com.gelecegiyazanlar.ceptediyetisyen.model.User" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_large"
                android:background="#BFFFFFFF"
                android:minWidth="400dp"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xlarge">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:text="@string/val_signup"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/hint_name"
                            android:singleLine="true"
                            android:text="@={userModel.name}" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form_people" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtSurname"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/hint_surname"
                            android:singleLine="true"
                            android:text="@={userModel.surname}" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form_people" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtMail"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:text="@={userModel.email}" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form_mail" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/hint_password"
                            android:singleLine="true" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form_lock" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtConfirmPassword"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/hint_password"
                            android:singleLine="true" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form_lock" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/spacing_large">

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector"
                        android:onClick="@{listener::onClick}"
                        android:text="@string/val_signup"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</layout>